Fixed scrollbar appearing on bottom

--- a/style.css
+++ b/style.css
@@ -82,8 +82,6 @@ h1, h2, h3, h4, h5, h6 {
 html {
 	background-color: var(--background);
 	position: relative;
-
-	max-width: 100vw;
 }
 
 a {
@@ -150,6 +148,7 @@ li {
 
 .scroller {
 	overflow-y: scroll;
+	overflow-x: hidden;
 	scroll-snap-type: y mandatory;
 	scroll-behavior: smooth;
 	height: 100vh;
